tests/error/10_undefined_func.py
# Undefined function
# Type Checker Error: Referencing undefined function "func"
func()
